<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="login_hint">login name</string>
    <string name="password">password</string>
    <string name="switchQuestion">What does this do?</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Camera">Camera</string>
...
    <string name="incomingCallDes">Incoming Call Icon</string>
    <string name="LabelMain">Main Activity</string>
    <string name="LabelLogin">Login Activity</string>
    <string name="LabelChat">Chat Window Activity</string>
    <string name="LabelListItems">List Items Activity</string>

    <string name="toolbar_read">Display Message</string>
    <string name="toolbar_back">Exit</string>
    <string name="toolbar_add">Add a new Message</string>
    <string name="toolbarButton">Test Toolbar</string>
    <string name="dialog_question">Do you want to go back?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="messageHint">New Message</string>
    <string name="dialogueDes">Dialogue box</string>
    <string name="customDialogPrompt">Type your message</string>
    <string name="noMsg">No message entered. Please try again</string>
    <string name="msgConfirm">Message saved!</string>
    <string name="changedMsg">Something that Salam has written</string>
    <string name="version">Version 1.0, by Salam</string>
    <string name="customMsg">You selected item 1</string>

    <string name="about">About</string>
    <string name="settings">Settings</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
...
