<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item android:id="@+id/choice1"
        android:title="@string/toolbar_read"
        android:icon="@drawable/read"
        android:orderInCategory="99"
        app:showAsAction="always" />

    <item android:id="@+id/choice2"
        android:title="@string/toolbar_back"
        android:icon="@drawable/back"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/choice3"
        android:title="@string/toolbar_add"
        android:icon="@drawable/add"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/custom_dialog_box"
        android:title="@string/messageHint"
        app:showAsAction="never" />
</menu>